docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/LegacyCRMDebtDetail__c.object-meta.xml
<CustomObject>
    <label>Legacy CRM Debt Detail</label>
    <nameField>
        <displayFormat>CRMDebtDetail-{0000}</displayFormat>
        <label>LegacyCRMDebtDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy CRM Debt Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>