docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed__c</fullName>
    <label>Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>