docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/Converted_to_Debt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Debt_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Debt Detail</label>
    <type>Checkbox</type>
</CustomField>