docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id__c</fullName>
    <label>Deal Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>