docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <formula>OR( Converted_to_Lead__c,  Converted_to_Debt_Detail__c )</formula>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>