docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/Lender_Id__c.field-meta.xml
<CustomField>
    <fullName>Lender_Id__c</fullName>
    <label>Lender Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>