docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <label>Lender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>