docs/sf-export/sfdx-raw/objects/LegacyCRMDebtDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Id__c</columns>
    <columns>Amount_Owed__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Frequency__c</columns>
    <columns>IsConverted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>